--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "pymupdf>=1.26.0",
     "python-escpos>=3.1",
     "pyusb>=1.3.1",
+    "serial>=0.0.97",
     "werkzeug>=3.1.3",
 ]
